close api for requests without token
