# swagger/v1/swagger.yaml
@@ -58,6 +58,51 @@ paths:
             - id
             - name
             - email
+  "/users/sign_in.json":
+    post:
+      summary: log in as existing user, get jwt
+      tags:
+      - Login
+      consumes:
+      - application/json
+      produces:
+      - application/json
+      parameters:
+      - name: user
+        in: body
+        schema:
+          type: object
+          properties:
+            user:
+              type: object
+              properties:
+                email:
+                  type: string
+                password:
+                  type: string
+              required:
+              - email
+              - password
+      responses:
+        '201':
+          description: user logged in
+          headers:
+            Authorization:
+              type: string
+              description: new JWT
+          examples:
+            application/json:
+              id: 507602454
+              email: greef@bountyhunters.com
+              created_at: '2020-04-26T13:20:20.737Z'
+              updated_at: '2020-04-26T13:20:20.737Z'
+              name: greef
+              jti: f4d270f8-3b36-404a-997d-023117046b73
+        '401':
+          description: login failed
+          examples:
+            application/json:
+              error: Invalid Email or password.
   "/api/v1/users":
     get:
       summary: list all the users
@@ -144,12 +189,12 @@ paths:
               errors:
               - status: 422
                 source:
-                  pointer: "/user/password"
-                detail: can't be blank
-              - status: 422
-                source:
                   pointer: "/user/email"
                 detail: has already been taken
+              - status: 422
+                source:
+                  pointer: "/user/password"
+                detail: can't be blank
               - status: 422
                 source:
                   pointer: "/user/name"
@@ -241,7 +286,7 @@ paths:
                 type: user
                 attributes:
                   name: Twix
-                  email: twix@skywalker.net
+                  email: raider@skywalker.net
     delete:
       summary: Deletes a users
       tags:
